Fixed the month and year views to wrap text.

--- a/themes/jaxplays/assets/ananke/css/_calendar.css
+++ b/themes/jaxplays/assets/ananke/css/_calendar.css
@@ -14,6 +14,19 @@ h2.fc-toolbar-title {
   box-shadow: none;
 }
 
+/* Make the events wrap on the calendar instead of run off */
+.fc-daygrid-event {
+  text-wrap: wrap;
+  display:flex;
+  align-items: flex-start;
+  padding-right: 2px;
+}
+
+/* Fix the dot so that it's lined up with the time */
+.fc-daygrid-event-dot {
+  margin-top:.2rem;
+}
+
 @media screen and (max-width:30em) {
   .fc .fc-toolbar {
     flex-direction: column-reverse;
